COSMOS final cat work

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -443,13 +443,17 @@
     "    ##################REVERT ids###################\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
-    "    flag_cigale_opt = cigale[\"UVoptIR_OPTchi2\"] <= cigale[\"UVoptIR_OPTchi2_threshold\"]\n",
-    "    flag_cigale_ir = cigale[\"UVoptIR_IRchi2\"] <= cigale[\"UVoptIR_IRchi2_threshold\"]\n",
+    "    \n",
+    "    # The thresholds have been removed from Cigale so we estimate them here based on \n",
+    "    # EN1 means from dmu28/dmu28_ELAIS-N1/data/zphot/HELP_final_results.fits\n",
+    "    \n",
+    "    flag_cigale_opt = cigale[\"stellar_best.reduced_chi_square\"] <= 6.071\n",
+    "    flag_cigale_ir = cigale[\"IR_best.reduced_chi_square\"] <= 5.07937\n",
     "    flag_cigale = (\n",
     "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  cigale[\"UVoptIR_best.reduced_chi_square_threshold\"]) &\n",
+    "             <=  5.63933 &\n",
     "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IRonly_IRchi2\"] <= cigale[\"IRonly_IRchi2_threshold\"]\n",
+    "    flag_cigale_ironly = cigale[\"IR_IRchi2\"] <= 4.199\n",
     "\n",
     "    cigale.add_columns([\n",
     "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
