COSMOS final catalogue

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -447,13 +447,21 @@
     "    # The thresholds have been removed from Cigale so we estimate them here based on \n",
     "    # EN1 means from dmu28/dmu28_ELAIS-N1/data/zphot/HELP_final_results.fits\n",
     "    \n",
-    "    flag_cigale_opt = cigale[\"stellar_best.reduced_chi_square\"] <= 6.071\n",
-    "    flag_cigale_ir = cigale[\"IR_best.reduced_chi_square\"] <= 5.07937\n",
+    "    #flag_cigale_opt = cigale[\"stellar_best.reduced_chi_square\"] <= 6.071\n",
+    "    #flag_cigale_ir = cigale[\"IR_best.reduced_chi_square\"] <= 5.07937\n",
+    "    #flag_cigale = (\n",
+    "        #(cigale[\"UVoptIR_best.reduced_chi_square\"] <=  5.63933 )\n",
+    "        #& flag_cigale_opt & flag_cigale_ir)\n",
+    "    #flag_cigale_ironly = cigale[\"IR_IRchi2\"] <= 4.199\n",
+    "    \n",
+    "    #values taken from dmu28/dmu28_COSMOS/data/photoz/full_sample_HISTO_chi2s.pdf\n",
+    "    \n",
+    "    flag_cigale_opt = cigale[\"stellar_best.reduced_chi_square\"] <= 5.42\n",
+    "    flag_cigale_ir = cigale[\"IR_best.reduced_chi_square\"] <= 4.94\n",
     "    flag_cigale = (\n",
-    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] \n",
-    "             <=  5.63933 &\n",
-    "        flag_cigale_opt & flag_cigale_ir)\n",
-    "    flag_cigale_ironly = cigale[\"IR_IRchi2\"] <= 4.199\n",
+    "        (cigale[\"UVoptIR_best.reduced_chi_square\"] <=  5.25 )\n",
+    "        & flag_cigale_opt & flag_cigale_ir)\n",
+    "    flag_cigale_ironly = cigale[\"IR_IRchi2\"] <= 4.92 # same as other ir because not available\n",
     "\n",
     "    cigale.add_columns([\n",
     "        MaskedColumn(flag_cigale, \"flag_cigale\", \n",
@@ -601,7 +609,7 @@
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/COSMOS.fits\")"
+    "    merged_table[columns].write(\"data/COSMOS_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
