COSMOS final catalogue

--- a/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_COSMOS/COSMOS_catalogue_merging.ipynb
@@ -431,7 +431,7 @@
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_COSMOS/data/photoz/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_COSMOS/data/photoz/final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "    \n",
     "    ##################REVERT ids###################\n",
@@ -584,7 +584,9 @@
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    print( set(columns) == set(merged_table.colnames))\n",
+    "    print( set(columns) - set(merged_table.colnames))\n",
+    "    print( set(merged_table.colnames) - set(columns))"
    ]
   },
   {
